--- a/MAMI/css/style.css
+++ b/MAMI/css/style.css
@@ -1,2 +1,18 @@
-body{background:#fff}
+aside{padding:1.5em 0;}
+aside a{display:inline-block;margin:.5em 1em;max-width:5%;min-width:5em;vertical-align:middle;}
+aside a img{width:100%}
+body{background:#fff;color:#000;font-family:'Open Sans',sans-serif;font-size:16px;text-align:center}
+header{padding:2em 0;}
+header figure{margin-right:10%;min-width:10em;width:15%;}
+header figure img{width:100%}
+header figure,header nav{display:inline-block;vertical-align:middle}
 header h1{height:0;margin:0;visibility:hidden;width:0}
+header nav ul{list-style-type:none;margin:0;padding:0;}
+header nav ul li{display:inline-block;margin:0 -2px;vertical-align:middle;}
+header nav ul li a{color:#00adbd;display:block;padding:1em;text-decoration:none;transition:all .5s ease}
+header nav ul li a:hover{background:#00adbd;color:#fff}
+#aliados{border-bottom:.5em solid #00adbd;color:#00adbd;font-size:.8em;padding:1em 0;}
+#aliados figure{display:inline-block;margin-right:1em;max-width:5%;min-width:5em;vertical-align:middle;}
+#aliados figure img{width:100%}
+#aliados p{margin:0;padding:0 0 .5em}
+#slider{background:#00adbd;max-height:20em;max-width:100%;padding:1em 0}
