--- a/MAMI/css/style.styl
+++ b/MAMI/css/style.styl
@@ -1,8 +1,71 @@
+aside
+	padding 1.5em 0
+	a
+		display inline-block
+		margin 0.5em 1em
+		max-width 5%
+		min-width 5em
+		vertical-align middle
+		img
+			width 100%
 body
 	background #FFFFFF
+	color #000000
+	font-family 'Open Sans', sans-serif
+	font-size 16px
+	text-align center
 header
+	padding 2em 0
+	figure
+		margin-right 10%
+		min-width 10em
+		width 15%
+		img
+			width 100%
+	figure,nav
+		display inline-block
+		vertical-align middle
 	h1
 		height 0
 		margin 0
 		visibility hidden
 		width 0
+	nav
+		ul
+			list-style-type none
+			margin 0
+			padding 0
+			li
+				display inline-block
+				margin 0 -2px
+				vertical-align middle
+				a
+					color #00ADBD
+					display block
+					padding 1em
+					text-decoration none
+					transition all 0.5s ease
+				a:hover
+					background #00ADBD
+					color #FFFFFF
+#aliados
+	border-bottom 0.5em solid #00ADBD
+	color #00ADBD
+	font-size 0.8em
+	padding 1em 0
+	figure
+		display inline-block
+		margin-right 1em
+		max-width 5%
+		min-width 5em
+		vertical-align middle
+		img
+			width 100%
+	p
+		margin 0
+		padding 0 0 0.5em
+#slider
+	background #00ADBD
+	max-height 20em
+	max-width 100%
+	padding 1em 0
